--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start:n17",
+    "build": "react-scripts build:n17",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
