--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build": "react-scripts build --openssl-legacy-provider",
-    "start": "react-scripts start --openssl-legacy-provider",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+   "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
